# mlops_hw1

./: .gitignore  README.md  app.py  dashboard.py  generate_proto.sh  grpc_client_test.py  grpc_server.py  models.py  pyproject.toml  requirements.txt  run_services.sh  test_flask_api.sh
.ipynb_checkpoints/: README-checkpoint.md  app-Copy1-checkpoint.py  app-checkpoint.proto  app-checkpoint.py  app_pb2-checkpoint.py  app_pb2_grpc-checkpoint.py  flask_ckpoints_commands-checkpoint.txt  grpc_client_test-checkpoint.py  grpc_server-checkpoint.py  models-checkpoint.py  run_services-checkpoint.sh
instance/: test.db
saved_models/: 0aafe76f-7324-49a7-a0d0-33f5e5ec844b.joblib  34e2a34f-d48a-4870-9c48-aef012444046.joblib  4d067821-f3a2-4548-8bda-9d1f0169ed67.joblib  88ef6a9c-a017-4977-87dd-db42c2b0c2ee.joblib  8b2e101d-1324-4ed8-84e9-48c3135bda29.joblib  8e7bb67d-5dbb-4663-ba10-f0266f4c4e99.joblib  b409b626-2256-424e-9760-e22abbefa844.joblib  ca613ca9-5edf-43da-8d0a-fce656f4ef51.joblib
