[tool.poetry]
name = "mlops-hw1"
version = "0.1.0"
description = "ML Model Service for MLOps Homework 1"
authors = [
    "Svetlana Serikova",
    "Natalya Semina" 
]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10"
grpcio = "==1.76.0"
flask = "==3.1.2"
flask-restx = "==1.3.2"
authlib = "==1.6.5"
werkzeug = "==3.1.3"
joblib = "==1.5.2"
scikit-learn = "==1.7.2"
protobuf = "==6.33.0"
flask-sqlalchemy = "==3.1.1"
grpcio-tools = "==1.76.0"
streamlit = "==1.51.0"
numpy = ">=1.21.0" 
pandas = ">=1.5.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
pytest = ">=7.0.0"
black = ">=23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"